# usaspending-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  usaspending-prd.md  wrangler.toml
.claude/: ralph-loop.local.md
.do/: app.yaml
.github/workflows/: ci.yml  publish.yml
.taskmaster/tasks/: tasks.json
tests/: test_api.py  test_cache.py  test_decision_tree.py  test_integration.py  test_server.py  test_tools_agency.py  test_tools_awards.py  test_tools_recipients.py  test_tools_remaining.py  test_transport.py
usaspending_mcp/: __init__.py  server.py
usaspending_mcp/client/: __init__.py  api.py  cache.py
usaspending_mcp/decision_tree/: elicitor.py  router.py
usaspending_mcp/notifications/: log.py  progress.py
usaspending_mcp/resources/: freshness.py  registry.py
usaspending_mcp/tools/: accounts.py  agency.py  awards.py  disaster.py  downloads.py  recipients.py  registry.py  spending.py  subawards.py
usaspending_mcp/transport/: http.py  session.py  stdio.py
workers/: proxy.js
