[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usaspending-mcp"
version = "0.1.1"
description = "MCP server for US federal spending data via api.usaspending.gov"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.scripts]
usaspending-mcp = "usaspending_mcp.server:main_stdio"
usaspending-mcp-http = "usaspending_mcp.server:main_http"

[project.entry-points."mcpb.extensions"]
usaspending-mcp = "usaspending_mcp:extension_manifest"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
